import { copy } from 'fs-extra';
import * as path from 'path';
import db, { holdTransaction, rollbackTransaction } from '../../../db';
import { fileExistsInBucket, MEDIA, MEDIA_BUCKET_URL, resetTestMinio, TEMP, TEMP_BUCKET_DIR } from '../../../minio';
import { GALICIA_R1_S1, NORWAY_SJOA_AMOT } from '../../../seeds/test/08_sections';
import { PHOTO_1, PHOTO_2 } from '../../../seeds/test/10_media';
import { adminContext, anonContext, userContext } from '../../../test/context';
import { countTables, noTimestamps, noUnstable, runQuery } from '../../../test/db-helpers';
import { MediaInput, MediaKind } from '../../../ww-commons/features/media';

let mBefore: number;
let msBefore: number;
let trBefore: number;

beforeAll(async () => {
  [mBefore, msBefore, trBefore] = await countTables(true, 'media', 'sections_media', 'media_translations');
});
beforeEach(async () => {
  await holdTransaction();
  await resetTestMinio();
});
afterEach(rollbackTransaction);
afterAll(() => resetTestMinio(true));

const mutation = `
  mutation upsertSectionMedia($sectionId: ID!, $media: MediaInput!, $language: String){
    upsertSectionMedia(sectionId: $sectionId, media: $media, language: $language){
      id
      language
      kind
      description
      copyright
      url
      resolution
      weight
      createdAt
      updatedAt
    }
  }
`;

const sectionId = NORWAY_SJOA_AMOT;

const NEW_MEDIA_ID = '717b3058-28f0-11e8-b467-0ed5f89f718b';

const media: MediaInput = {
  id: NEW_MEDIA_ID, // always has some id, pregenerated by mediaForm
  copyright: 'new media copyright',
  description: 'new media description',
  kind: MediaKind.photo,
  url: NEW_MEDIA_ID,
  resolution: [1920, 1080],
  weight: null,
};

describe('resolvers chain', () => {
  it('anon should not pass', async () => {
    const result = await runQuery(mutation, { sectionId, media }, anonContext);
    expect(result).toHaveProperty('errors.0.name', 'AuthenticationRequiredError');
    expect(result).toHaveProperty('data.upsertSectionMedia', null);
  });

  it('user should not pass', async () => {
    const result = await runQuery(mutation, { sectionId, media }, userContext);
    expect(result).toHaveProperty('errors.0.name', 'ForbiddenError');
    expect(result).toHaveProperty('data.upsertSectionMedia', null);
  });

  it('should throw on invalid input', async () => {
    const badMedia = {
      id: 'wtf',
      copyright: 'new media copyright',
      description: 'new media description',
      kind: MediaKind.photo,
      url: 'zzzzz',
      resolution: [800, 600, 900],
      weight: -10,
    };
    const result = await runQuery(mutation, { sectionId, media: badMedia }, adminContext);
    expect(result).toHaveProperty('data.upsertSectionMedia', null);
    expect(result).toHaveProperty('errors.0.name', 'ValidationError');
    expect((result.errors![0] as any).data).toMatchSnapshot();
  });

});

describe('insert', () => {
  it('should fail on non-existing section id', async () => {
    const result = await runQuery(mutation, { sectionId: '852421bc-2848-11e8-b467-0ed5f89f718b', media }, adminContext);
    expect(result).toHaveProperty('errors.0.name', 'ValidationError');
    expect(result).toHaveProperty('errors.0.message', 'Invalid section id');
    expect(result).toHaveProperty('data.upsertSectionMedia', null);
  });

  it('should return result', async () => {
    const result = await runQuery(mutation, { sectionId, media }, adminContext);
    expect(result.errors).toBeUndefined();
    expect(noTimestamps(result.data)).toMatchSnapshot();
  });

  it('should add one more media to db', async () => {
    await runQuery(mutation, { sectionId, media }, adminContext);
    const [m, ms, tr] = await countTables(false, 'media', 'sections_media', 'media_translations');
    expect([m - mBefore, ms - msBefore, tr - trBefore]).toMatchObject([1, 1, 1]);
  });
});

describe('update', () => {
  const uMedia = { ...media, id: PHOTO_1 };

  it('should fail on wrong section id', async () => {
    const result = await runQuery(mutation, { sectionId: GALICIA_R1_S1, media: uMedia }, adminContext);
    expect(result).toHaveProperty('errors.0.name', 'ValidationError');
    expect(result).toHaveProperty('errors.0.message', 'Invalid section id');
    expect(result).toHaveProperty('data.upsertSectionMedia', null);
  });

  it('should return result', async () => {
    const result = await runQuery(mutation, { sectionId, media: uMedia }, adminContext);
    expect(result.errors).toBeUndefined();
    expect(noUnstable(result.data)).toMatchSnapshot();
  });

  it('should not change db counts', async () => {
    await runQuery(mutation, { sectionId, media: uMedia }, adminContext);
    const [m, ms, tr] = await countTables(false, 'media', 'sections_media', 'media_translations');
    expect([m - mBefore, ms - msBefore, tr - trBefore]).toMatchObject([0, 0, 0]);
  });

  it('should not change media kind', async () => {
    const badMedia = { ...uMedia, kind: 'blog' };
    const result = await runQuery(mutation, { sectionId, media: badMedia }, adminContext);
    expect(result.errors).toBeUndefined();
    expect(result).toHaveProperty('data.upsertSectionMedia.kind', 'photo');
  });
});

describe('i18n', () => {
  const aMedia = { ...media, id: PHOTO_2 };
  const uMedia = { ...media, id: PHOTO_1 };

  it('should add new translation', async () => {
    await runQuery(mutation, { sectionId, media: aMedia, language: 'ru' }, adminContext);
    const [m, ms, tr] = await countTables(false, 'media', 'sections_media', 'media_translations');
    expect([m - mBefore, ms - msBefore, tr - trBefore]).toMatchObject([0, 0, 1]);
  });

  it('should modify common props in other language', async () => {
    await runQuery(mutation, { sectionId, media: aMedia, language: 'ru' }, adminContext);
    const { resolution } = await db().table('media_view').select('resolution')
      .where({ id: PHOTO_2, language: 'en' }).first();
    expect(resolution).toMatchObject([1920, 1080]);
  });

  it('should modify existing translation', async () => {
    await runQuery(mutation, { sectionId, media: uMedia, language: 'ru' }, adminContext);
    const [m, ms, tr] = await countTables(false, 'media', 'sections_media', 'media_translations');
    expect([m - mBefore, ms - msBefore, tr - trBefore]).toMatchObject([0, 0, 0]);
    const { description } = await db().table('media_view').select('description')
      .where({ id: PHOTO_1, language: 'ru' }).first();
    expect(description).toBe('new media description');
  });
});

describe('files', () => {
  let result: any;

  beforeEach(async () => {
    // Emulate file with the same key as existing avatar uploaded by user
    await copy(
      path.resolve(__dirname, '__tests__/test.jpg'),
      path.resolve(TEMP_BUCKET_DIR, NEW_MEDIA_ID),
    );
    result = await runQuery(mutation, { sectionId, media }, adminContext);
    expect(result.errors).toBeUndefined();
  });

  it('should move files from temp to media', async () => {
    await expect(fileExistsInBucket(TEMP, 'test.jpg')).resolves.toBe(false);
    await expect(fileExistsInBucket(TEMP, NEW_MEDIA_ID)).resolves.toBe(false);
    // expect items bucket to contain new_image.jpg
    await expect(fileExistsInBucket(MEDIA, NEW_MEDIA_ID, 'a1c4720fa8526d4a8560dd1cb29c0ea7'))
      .resolves.toBe(true);
  });

  it('should store only filenames', async () => {
    const { url } = await db().table('media').select(['url']).where({ id: NEW_MEDIA_ID }).first();
    expect(url).toBe(NEW_MEDIA_ID);
  });

  it('should return url in bucket', async () => {
    expect(result).toHaveProperty('data.upsertSectionMedia.url', `${MEDIA_BUCKET_URL}/${NEW_MEDIA_ID}`);
  });
});
